fix search results on small screens, latest metadata

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -17,7 +17,6 @@ p.search-type {
 }
 
 .metadata_header {
-    text-align: right;
     font-weight: bold;
 }
 
